--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,9 @@ author:
   github_username: "ipm"
   linkedin: "Ixchel-peralta"
 
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 plugins:
   - jekyll-seo-tag
