--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,11 @@ author:
   linkedin: "Ixchel-peralta"
 
 remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
+  - jekyll-remote-theme
   
 exclude:
   - "README.md"
