--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,14 @@
 title: "Ixchel's Portfolio"
 description: "Portfolio of Ixchel"
-url: "https://ixchel.github.io"
-baseurl: ""
  
 author:
   name: "Ixchel"
   email: "ixchel@example.com"
   github_username: "ipm"
   linkedin: "Ixchel-peralta"
-
 remote_theme: pages-themes/minimal@v0.2.0
-
 plugins:
-  - jekyll-seo-tag
-  - jekyll-sitemap
-  - jekyll-remote-theme
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 exclude:
   - "README.md"
