--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,7 @@ author:
   email: "ixchel@example.com"
   github_username: "ipm"
   linkedin: "Ixchel-peralta"
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-
+theme: jekyll-theme-minimal
 exclude:
   - "README.md"
   - "LICENSE"
