--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
 title: "Ixchel's Portfolio"
 description: "Portfolio of Ixchel"
 theme: jekyll-theme-minimal
+
+author:
+  name: "Ixchel"
+  email: "ixchel@example.com"
+  github_username: "ipm"
+  linkedin: "Ixchel-peralta"
